Create my github page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,103 @@
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <title>Learn more about the Earth</title>
+    <meta charset="UTF-8" />
+  </head>
+  <body>
+    <div class="grid-container">
+      <header>
+        <h1 id="earth">Earth</h1>
+      </header>
+      <nav>
+        <ul>
+          <li>Navigation bar</li>
+          <li><a href="">Home</a></li>
+          <li><a href="">Mercury</a></li>
+          <li><a href="">Venus</a></li>
+          <li><a href="">Mars</a></li>
+        </ul>
+      </nav>
+      <main>
+        <p>
+          Earth, the third planet from the Sun &amp; the only known planet to
+          support life, is a dynamic and diverse world teeming with ecosystems
+          and natural wonders. Composed primarily of rock and metal, Earth
+          harbors a unique atmosphere rich in nitrogen and oxygen, essential for
+          supporting life as we know it.
+        </p>
 
-<body>
-  <h1>YOUR NAME</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
+        <p>
+          Its moderate climate, with temperatures ranging from freezing polar
+          regions to scorching equatorial zones, sustains a wide array of
+          habitats and ecosystems.
+        </p>
+        <p>
+          Earth's hospitable conditions have nurtured a rich tapestry of life
+          forms, from microscopic organisms to majestic forests and diverse
+          animal species. With vast oceans covering &gt; 70% of its surface,
+          Earth is a planet of stunning landscapes, ranging from towering
+          mountains to sprawling plains and lush rainforests.
+        </p>
+        <p>
+          Its dynamic geology, marked by tectonic activity and volcanic
+          eruptions, continuously shapes the planet's surface, contributing to
+          its ever-evolving beauty and complexity.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et
+          neque bibendum, faucibus tortor non, semper lorem. Pellentesque vitae
+          pulvinar dolor. Phasellus placerat mollis nulla, ac laoreet felis
+          eleifend eu. Etiam ullamcorper est quis nisi facilisis ultricies.
+          Suspendisse libero arcu, tincidunt sed purus ac, vulputate egestas
+          massa. Phasellus malesuada eros vel faucibus tristique. Integer
+          ultricies, enim quis varius semper, elit mauris pharetra metus, ac
+          commodo quam turpis eu enim. Curabitur luctus lectus tellus, vitae
+          ultricies quam tempor vel. Nullam eget elit ornare, luctus mi eget,
+          imperdiet sem. In aliquet at ex nec iaculis. Nam tempor ac magna ac
+          efficitur. Sed pretium eros vitae sapien efficitur ullamcorper. Fusce
+          ut ipsum commodo, gravida massa sed, efficitur mauris. Proin in lectus
+          a elit efficitur ullamcorper eu id ante.
+        </p>
+        <p>
+          Fusce pharetra massa fermentum ipsum maximus, finibus porta sem
+          pulvinar. Mauris in mattis dolor, a rhoncus mauris. Interdum et
+          malesuada fames ac ante ipsum primis in faucibus. Mauris tristique
+          lorem et mauris eleifend consectetur. Cras commodo metus velit.
+          Pellentesque efficitur est quis tincidunt ultrices. Donec sodales
+          velit ac commodo tincidunt. Mauris porta orci in orci rutrum varius.
+        </p>
+        <p>
+          Fusce pharetra massa fermentum ipsum maximus, finibus porta sem
+          pulvinar. Mauris in mattis dolor, a rhoncus mauris. Interdum et
+          malesuada fames ac ante ipsum primis in faucibus. Mauris tristique
+          lorem et mauris eleifend consectetur. Cras commodo metus velit.
+          Pellentesque efficitur est quis tincidunt ultrices. Donec sodales
+          velit ac commodo tincidunt. Mauris porta orci in orci rutrum varius.
+        </p>
+        <p>
+          Nullam porta enim in justo interdum consectetur. Cras sed sem id massa
+          malesuada accumsan quis a tortor. Morbi at odio lacus. In et nisl
+          faucibus, auctor nunc sit amet, pellentesque mauris. Cras congue
+          auctor nunc, et semper ante accumsan eu. Ut sit amet libero erat.
+          Fusce porttitor suscipit mi, nec aliquam lectus aliquam a.
+        </p>
+      </main>
+      <aside>
+        <img src="earth_photo2.jpg" alt="our planet earth" />
+        <h6>
+          This image was found at pixabay. It is &quot;free for commercial
+          use&quot; and &quot;no attribution required&quot; license
+        </h6>
+      </aside>
 
+      <footer>
+        <p>
+          Date: 10/02/24<br />
+          Author: John Schmendt
+        </p>
+      </footer>
+    </div>
+  </body>
 </html>
