--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
       </main>
       <aside>
         <img src="earth_photo2.jpg" alt="our planet earth" />
-        <h6>
+        <p id="copyright-text">
           This image was found at pixabay. It is &quot;free for commercial
           use&quot; and &quot;no attribution required&quot; license
-        </h6>
+        </p>
       </aside>
 
       <footer>
