--- a/layout_tests/flexbox/flexbox.html
+++ b/layout_tests/flexbox/flexbox.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0" url="http://chloeng12.github.io/chloeng12.github.io/layout_tests/flexbox/flexbox.html" />
+<!-- <meta http-equiv="refresh" content="0" url="http://chloeng12.github.io/chloeng12.github.io/layout_tests/flexbox/flexbox.html" /> -->
