--- a/layout_tests/flexbox/flexbox.html
+++ b/layout_tests/flexbox/flexbox.html
@@ -1,104 +1,64 @@
-<!-- <meta http-equiv="refresh" content="0" url="http://chloeng12.github.io/chloeng12.github.io/layout_tests/flexbox/flexbox.html" /> -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="style.css" />
-    <title>Learn more about the Earth</title>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>News Blocks</title>
+    <link rel="stylesheet" href="flexbox.css" />
   </head>
   <body>
-    <div class="grid-container">
-      <header>
-        <h1 id="earth">Earth</h1>
-      </header>
-      <nav>
-        <ul>
-          <li>Navigation bar</li>
-          <li><a href="">Home</a></li>
-          <li><a href="">Mercury</a></li>
-          <li><a href="">Venus</a></li>
-          <li><a href="">Mars</a></li>
-        </ul>
-      </nav>
-      <main>
+    <h1>Top News</h1>
+    <div class="container">
+      <div class="news-block">
+        <figure>
+          <img src="/images/blizzard.jpg" alt="blizzard photo" />
+          <figcaption>Suspendisse sit - Source: pixabay</figcaption>
+        </figure>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
         <p>
-          Earth, the third planet from the Sun &amp; the only known planet to
-          support life, is a dynamic and diverse world teeming with ecosystems
-          and natural wonders. Composed primarily of rock and metal, Earth
-          harbors a unique atmosphere rich in nitrogen and oxygen, essential for
-          supporting life as we know it.
+          Duis convallis id libero a laoreet. Suspendisse sit amet ultrices mi.
+          Venenatis auctor quam molestie sed.
         </p>
-
+        <p><a href="#">Read More</a></p>
+      </div>
+      <div class="news-block">
+        <figure>
+          <img src="/images/strawberry.jpg" alt="strawberry photo" />
+          <figcaption>Sed vestibulum aliquam - Source: pixabay</figcaption>
+        </figure>
+        <h3>Cras eu pharetra felis, quis elementum libero</h3>
         <p>
-          Its moderate climate, with temperatures ranging from freezing polar
-          regions to scorching equatorial zones, sustains a wide array of
-          habitats and ecosystems.
+          Suspendisse posuere, urna sed vestibulum aliquam, nulla mi cursus
+          massa, et elementum ligula lacus in nisl. Praesent ac malesuada mi.
         </p>
+        <p><a href="#">Read More</a></p>
+      </div>
+      <div class="news-block">
+        <figure>
+          <img src="/images/tram.jpg" alt="a tram photo" />
+          <figcaption>Nulla faucibus dolor - Source: pixabay</figcaption>
+        </figure>
+        <h3>Curabitur elementum augue ut orci cursus mattis</h3>
         <p>
-          Earth's hospitable conditions have nurtured a rich tapestry of life
-          forms, from microscopic organisms to majestic forests and diverse
-          animal species. With vast oceans covering &gt; 70% of its surface,
-          Earth is a planet of stunning landscapes, ranging from towering
-          mountains to sprawling plains and lush rainforests.
+          Pellentesque at semper risus. Nulla faucibus dolor nisl, venenatis
+          auctor quam molestie sed.
         </p>
+        <p><a href="#">Read More</a></p>
+      </div>
+      <div class="news-block">
+        <figure>
+          <img src="/images/bear.jpg" alt="a bear photo" />
+          <figcaption>Convallis turpis photo - Source: pixabay</figcaption>
+        </figure>
+        <h3>Integer vitae fringilla tortor, auctor posuere nisl.</h3>
         <p>
-          Its dynamic geology, marked by tectonic activity and volcanic
-          eruptions, continuously shapes the planet's surface, contributing to
-          its ever-evolving beauty and complexity.
+          Nulla eu convallis turpis. Duis est ipsum, laoreet vel ex at, sagittis
+          suscipit diam. Nulla eu convallis turpis. Duis est ipsum, laoreet vel
+          ex at.
         </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et
-          neque bibendum, faucibus tortor non, semper lorem. Pellentesque vitae
-          pulvinar dolor. Phasellus placerat mollis nulla, ac laoreet felis
-          eleifend eu. Etiam ullamcorper est quis nisi facilisis ultricies.
-          Suspendisse libero arcu, tincidunt sed purus ac, vulputate egestas
-          massa. Phasellus malesuada eros vel faucibus tristique. Integer
-          ultricies, enim quis varius semper, elit mauris pharetra metus, ac
-          commodo quam turpis eu enim. Curabitur luctus lectus tellus, vitae
-          ultricies quam tempor vel. Nullam eget elit ornare, luctus mi eget,
-          imperdiet sem. In aliquet at ex nec iaculis. Nam tempor ac magna ac
-          efficitur. Sed pretium eros vitae sapien efficitur ullamcorper. Fusce
-          ut ipsum commodo, gravida massa sed, efficitur mauris. Proin in lectus
-          a elit efficitur ullamcorper eu id ante.
-        </p>
-        <p>
-          Fusce pharetra massa fermentum ipsum maximus, finibus porta sem
-          pulvinar. Mauris in mattis dolor, a rhoncus mauris. Interdum et
-          malesuada fames ac ante ipsum primis in faucibus. Mauris tristique
-          lorem et mauris eleifend consectetur. Cras commodo metus velit.
-          Pellentesque efficitur est quis tincidunt ultrices. Donec sodales
-          velit ac commodo tincidunt. Mauris porta orci in orci rutrum varius.
-        </p>
-        <p>
-          Fusce pharetra massa fermentum ipsum maximus, finibus porta sem
-          pulvinar. Mauris in mattis dolor, a rhoncus mauris. Interdum et
-          malesuada fames ac ante ipsum primis in faucibus. Mauris tristique
-          lorem et mauris eleifend consectetur. Cras commodo metus velit.
-          Pellentesque efficitur est quis tincidunt ultrices. Donec sodales
-          velit ac commodo tincidunt. Mauris porta orci in orci rutrum varius.
-        </p>
-        <p>
-          Nullam porta enim in justo interdum consectetur. Cras sed sem id massa
-          malesuada accumsan quis a tortor. Morbi at odio lacus. In et nisl
-          faucibus, auctor nunc sit amet, pellentesque mauris. Cras congue
-          auctor nunc, et semper ante accumsan eu. Ut sit amet libero erat.
-          Fusce porttitor suscipit mi, nec aliquam lectus aliquam a.
-        </p>
-      </main>
-      <aside>
-        <img src="earth_photo2.jpg" alt="our planet earth" />
-        <p id="copyright-text">
-          This image was found at pixabay. It is &quot;free for commercial
-          use&quot; and &quot;no attribution required&quot; license
-        </p>
-      </aside>
-
-      <footer>
-        <p>
-          Date: 10/02/24<br />
-          Author: John Schmendt
-        </p>
-      </footer>
+        <p><a href="#">Read More</a></p>
+      </div>
     </div>
   </body>
 </html>
