--- a/layout_tests/flexbox/index.html
+++ b/layout_tests/flexbox/index.html
@@ -24,7 +24,7 @@
       </div>
       <div class="news-block">
         <figure>
-          <img src="/images/strawberry.jpg" alt="strawberry photo" />
+          <img src="images/strawberry.jpg" alt="strawberry photo" />
           <figcaption>Sed vestibulum aliquam - Source: pixabay</figcaption>
         </figure>
         <h3>Cras eu pharetra felis, quis elementum libero</h3>
