--- a/layout_tests/flexbox/index.html
+++ b/layout_tests/flexbox/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="news-block">
         <figure>
-          <img src="/images/blizzard.jpg" alt="blizzard photo" />
+          <img src="images/blizzard.jpg" alt="blizzard photo" />
           <figcaption>Suspendisse sit - Source: pixabay</figcaption>
         </figure>
         <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
@@ -36,7 +36,7 @@
       </div>
       <div class="news-block">
         <figure>
-          <img src="/images/tram.jpg" alt="a tram photo" />
+          <img src="images/tram.jpg" alt="a tram photo" />
           <figcaption>Nulla faucibus dolor - Source: pixabay</figcaption>
         </figure>
         <h3>Curabitur elementum augue ut orci cursus mattis</h3>
@@ -48,7 +48,7 @@
       </div>
       <div class="news-block">
         <figure>
-          <img src="/images/bear.jpg" alt="a bear photo" />
+          <img src="images/bear.jpg" alt="a bear photo" />
           <figcaption>Convallis turpis photo - Source: pixabay</figcaption>
         </figure>
         <h3>Integer vitae fringilla tortor, auctor posuere nisl.</h3>
