--- a/media-query/index.html
+++ b/media-query/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>News Blocks</title>
+    <title>News Blocks With Media Queries</title>
     <link rel="stylesheet" href="media-query.css" />
   </head>
   <body>
