--- a/imaginary-shop/index.html
+++ b/imaginary-shop/index.html
@@ -1,11 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Work in progress</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/ab280b87be.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Shoya Ramen</title>
+  </head>
+  <body>
+    <header class="header">
+      <nav class="header__nav">
+        <div class="header__logo">
+          <p>🍜</p>
+          <h1>Shoya Ramen</h1>
+        </div>
+        <ul class="header__links">
+          <li>
+            <a href="#">HOME</a>
+          </li>
+          <li>
+            <a href="http://127.0.0.1:5500/index.html#about-us">ABOUT US</a>
+          </li>
+          <li>
+            <a href="menu.html">MENU</a>
+          </li>
+          <li>
+            <a href="contact.html">CONTACT</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="home-main">
+      <section class="hero">
+        <div class="hero__image">
+          <img src="images/banner.jpg" alt="banner image" />
+        </div>
+        <div class="hero__content">
+          <div class="hero-content__text">
+            <h1>Enjoy The Best Japanese Ramen In Town</h1>
+
+            <h2>
+              Thick, creamy broth with thin noodles and delicious toppings. We
+              bring authentic flavors that transport you straight to the
+              bustling streets of Tokyo.
+            </h2>
+
+            <p>Visit us: Ratapihantie 13, 00520 Helsinki</p>
+          </div>
+
+          <a href="menu.html" class="hero-content__link">
+            <button class="menu-btn">Menu</button>
+          </a>
+        </div>
+      </section>
+
+      <section class="about-us" id="about-us">
+        <div class="about-us__content">
+          <h1 class="about-us-title">About us</h1>
+          <p class="about-us-subtitle">わたしたちについて</p>
+          <p class="about-us-text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto
+            accusantium, ipsam sint quas dolorem enim nisi sit neque aut commodi
+            minima tenetur eaque necessitatibus nihil quis autem qui laudantium
+            quam! Maxime, exercitationem eveniet quis repellendus id ea beatae,
+            accusamus voluptatem magnam. Veniam atque ratione, eum fuga minus
+            suscipit possimus ipsam, rerum recusandae distinctio quibusdam.
+          </p>
+          <p class="about-us-text">
+            Numquam totam magni in quod voluptate perferendis rem, obcaecati
+            voluptatum labore! Debitis ducimus totam quia aperiam reprehenderit
+            illo reiciendis. Necessitatibus culpa autem, aspernatur obcaecati
+            tempore alias odio vero modi facere! Sequi, non animi. Eos eligendi
+            nesciunt praesentium ducimus tenetur porro est ullam doloremque
+            accusamus.
+          </p>
+        </div>
+        <figure class="about-us__image">
+          <img src="images/about-us.jpg" alt="about us image" />
+        </figure>
+      </section>
+
+      <section class="specialty">
+        <h2 class="specialty-title">Shoya's Specialty</h2>
+        <p class="specialty-subtitle">スペシャリテ</p>
+
+        <div class="specialty__container">
+          <div class="specialty-card">
+            <figure class="card-image">
+              <img src="images/specialty.jpg" alt="specialty dish" />
+            </figure>
+            <div class="card-text">
+              <h1 class="card-description">Tantan Ramen</h1>
+              <p class="card-ingredients">
+                Sesame broth | Charsiu | Egg | Vegatable | Noodle
+              </p>
+              <p class="card-price">14.50€</p>
+            </div>
+          </div>
+          <div class="specialty-card">
+            <figure class="card-image">
+              <img src="images/specialty.jpg" alt="specialty dish" />
+            </figure>
+            <div class="card-text">
+              <h1 class="card-description">Shoyu Ramen</h1>
+              <p class="card-ingredients">
+                Chicken-based broth | Soy sauced chicken | Egg | Vegetable |
+                Noodle
+              </p>
+              <p class="card-price">13€</p>
+            </div>
+          </div>
+          <div class="specialty-card">
+            <figure class="card-image">
+              <img src="images/specialty.jpg" alt="specialty dish" />
+            </figure>
+            <div class="card-text">
+              <h1 class="card-description">Miso Ramen</h1>
+              <p class="card-ingredients">
+                Miso-based pork broth | Charsiu | Egg | Vegatable | Noodle
+              </p>
+              <p class="card-price">14€</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="newsletter">
+        <h2>
+          Get monthly offers <br />
+          to your inbox
+        </h2>
+        <p>Sign up for the Shoya newsletter</p>
+
+        <form class="newsletter__form">
+          <input type="text" placeholder="Enter your email address" />
+          <button>Subscribe</button>
+        </form>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__logo">
+        <h2>Shoya Ramen</h2>
+      </div>
+      <div class="footer__address">
+        <h3 class="address__title">Address</h3>
+        <p>Ratapihantie 13, 00520 Helsinki</p>
+      </div>
+      <div class="footer__hours">
+        <h3 class="hours__title">Opening hours</h3>
+        <p>Mon - Fri: 10 - 20</p>
+        <p>Sat - Sun: 11 - 22</p>
+      </div>
+      <div class="footer__social">
+        <h3 class="social__title">Social media</h3>
+        <div class="social__icons">
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
