--- a/imaginary-shop/contact.html
+++ b/imaginary-shop/contact.html
@@ -14,7 +14,7 @@
     <header class="header">
       <nav class="header__nav">
         <div class="header__logo">
-          <p>🍜</p>
+          <h1 class="icon">🍜</h1>
           <h1>Shoya Ramen</h1>
         </div>
         <ul class="header__links">
@@ -36,7 +36,7 @@
     <main class="contact-main">
       <div class="contact-heading">
         <h1 class="contact-heading__title">Contact</h1>
-        <p class="contact-heading__subtitle">コンタクト</p>
+        <h2 class="contact-heading__subtitle">コンタクト</h2>
       </div>
       <div class="contact-info">
         <p>Address: Ratapihantie 13, 00520 Helsinki</p>
@@ -45,17 +45,17 @@
       </div>
 
       <form class="contact-form">
-        <label>First Name</label>
-        <input type="text" placeholder="First name" />
+        <label for="fname">First Name</label>
+        <input type="text" id="fname" placeholder="First name" />
 
-        <label>Last Name</label>
-        <input type="text" placeholder="Last name" />
+        <label for="lname">Last Name</label>
+        <input type="text" id="lname" placeholder="Last name" />
 
-        <label>Email </label>
-        <input type="text" placeholder="Example@gmail.com" />
+        <label for="email">Email </label>
+        <input type="text" id="email" placeholder="Example@gmail.com" />
 
-        <label>Message</label>
-        <textarea placeholder="Send us a message"></textarea>
+        <label for="message">Message</label>
+        <textarea id="message" placeholder="Send us a message"></textarea>
 
         <button class="submit-btn">Submit</button>
       </form>
