--- a/imaginary-shop/menu.html
+++ b/imaginary-shop/menu.html
@@ -14,7 +14,7 @@
     <header class="header">
       <nav class="header__nav">
         <div class="header__logo">
-          <p>🍜</p>
+          <h1 class="icon">🍜</h1>
           <h1>Shoya Ramen</h1>
         </div>
         <ul class="header__links">
@@ -35,8 +35,8 @@
     </header>
     <main class="menu-main">
       <div class="menu-heading">
-        <h2 class="menu-heading__title">Menu</h2>
-        <p class="menu-heading__subtitle">メニュー</p>
+        <h1 class="menu-heading__title">Menu</h1>
+        <h2 class="menu-heading__subtitle">メニュー</h2>
       </div>
       <div class="menu-tables">
         <table>
