--- a/imaginary-shop/menu.html
+++ b/imaginary-shop/menu.html
@@ -14,7 +14,7 @@
     <header class="header">
       <nav class="header__nav">
         <div class="header__logo">
-          <h1 class="icon">🍜</h1>
+          <div class="icon">🍜</div>
           <h1>Shoya Ramen</h1>
         </div>
         <ul class="header__links">
@@ -22,7 +22,11 @@
             <a href="index.html">HOME</a>
           </li>
           <li>
-            <a href="https://chloeng12.github.io/imaginary-shop/index.html#about-us">ABOUT US</a>
+            <!-- <a href="http://127.0.0.1:5500/index.html#about-us">ABOUT US</a> -->
+            <a
+              href="https://chloeng12.github.io/imaginary-shop/index.html#about-us"
+              >ABOUT US</a
+            >
           </li>
           <li>
             <a href="#">MENU</a>
@@ -39,8 +43,8 @@
         <h2 class="menu-heading__subtitle">メニュー</h2>
       </div>
       <div class="menu-tables">
+        <h2 class="menu-table__header">Starter</h2>
         <table>
-          <h2 class="menu-table__header">Starter</h2>
           <tr class="table-headings">
             <th class="dish">Dish</th>
             <th class="ingredient">Ingredients</th>
@@ -58,8 +62,8 @@
           </tr>
         </table>
 
+        <h2 class="menu-table__header">Pork Ramen</h2>
         <table>
-          <h2 class="menu-table__header">Pork Ramen</h2>
           <tr class="table-headings">
             <th class="dish">Dish</th>
             <th>Ingredients</th>
@@ -82,8 +86,8 @@
           </tr>
         </table>
 
+        <h2 class="menu-table__header">Chicken Ramen</h2>
         <table>
-          <h2 class="menu-table__header">Chicken Ramen</h2>
           <tr class="table-headings">
             <th class="dish">Dish</th>
             <th>Ingredients</th>
