--- a/imaginary-shop/index.html
+++ b/imaginary-shop/index.html
@@ -14,7 +14,7 @@
     <header class="header">
       <nav class="header__nav">
         <div class="header__logo">
-          <h1 class="icon">🍜</h1>
+          <div class="icon">🍜</div>
           <h1>Shoya Ramen</h1>
         </div>
         <ul class="header__links">
@@ -22,7 +22,11 @@
             <a href="#">HOME</a>
           </li>
           <li>
-            <a href="https://chloeng12.github.io/imaginary-shop/index.html#about-us">ABOUT US</a>
+            <!-- <a href="http://127.0.0.1:5500/index.html#about-us">ABOUT US</a> -->
+            <a
+              href="https://chloeng12.github.io/imaginary-shop/index.html#about-us"
+              >ABOUT US</a
+            >
           </li>
           <li>
             <a href="menu.html">MENU</a>
@@ -52,9 +56,9 @@
           </div>
 
           <div class="hero-content__btn">
-            <button class="menu-btn">
-              <a href="menu.html" class="menu-btn__link">Menu</a>
-            </button>
+            <!-- <button class="menu-btn"> -->
+            <a href="menu.html" class="menu-btn__link">Menu</a>
+            <!-- </button> -->
           </div>
         </div>
       </section>
