--- a/imaginary-shop/index.html
+++ b/imaginary-shop/index.html
@@ -142,8 +142,12 @@
         <h3>Sign up for the Shoya newsletter</h3>
 
         <form class="newsletter__form">
-          <label class="offscreen">Email</label>
-          <input type="text" placeholder="Enter your email address" />
+         <label for="email" class="offscreen">Email</label>
+          <input
+            type="text"
+            id="email"
+            placeholder="Enter your email address"
+          />
           <button>Subscribe</button>
         </form>
       </section>
