--- a/imaginary-shop/index.html
+++ b/imaginary-shop/index.html
@@ -90,7 +90,7 @@
       </section>
 
       <section class="specialty">
-        <h1 class="specialty-title">Shoya's Specialty</h1>
+        <h1 class="specialty-title">Shoya's specialty</h1>
         <h2 class="specialty-subtitle">スペシャリテ</h2>
 
         <div class="specialty__container">
