--- a/imaginary-shop/index.html
+++ b/imaginary-shop/index.html
@@ -101,7 +101,7 @@
             <div class="card-text">
               <h1 class="card-description">Tantan Ramen</h1>
               <p class="card-ingredients">
-                Sesame broth | Charsiu | Egg | Vegatable | Noodle
+                Sesame broth | Charsiu | Egg | Vegetable | Noodle
               </p>
               <p class="card-price">14.50€</p>
             </div>
@@ -126,7 +126,7 @@
             <div class="card-text">
               <h1 class="card-description">Miso Ramen</h1>
               <p class="card-ingredients">
-                Miso-based pork broth | Charsiu | Egg | Vegatable | Noodle
+                Miso-based pork broth | Charsiu | Egg | Vegetable | Noodle
               </p>
               <p class="card-price">14€</p>
             </div>
